# rustcrypto-signatures

./: Cargo.toml
dilithium/: Cargo.toml
dilithium/src/: api.rs  consts.rs  expand_a.rs  expand_s.rs  keypair.rs  lib.rs  ntt.rs  poly32.rs  reduce.rs  signing_key.rs  types.rs  variant.rs
dilithium/tests/: kat.rs  nistrng.rs
