[package]
name = "dilithium"
version = "0.1.0"
authors = ["Amber Sprenkels"]
license = "Apache-2.0 OR MIT"
description = """
Dilithium (ML-DSA) (as specified in NIST FIPS 204)
Provides all variants of the lattice-based post-quantum signature scheme
"""
documentation = "https://docs.rs/ed25519"
repository = "https://github.com/dsprenkels/rustcrypto-signatures"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "dilithium", "ML-DSA", "lattice", "signature", "signing"]
edition = "2021"
rust-version = "1.60"

[dependencies]
generic-array = { version = "1.0.0", default-features = false }
sha3 = { version = "0.10", default-features = false }

[dependencies.signature]
version = "2"
default-features = false
features = ["rand_core"]

[dev-dependencies]
aes = "0.8.3"

# optional dependencies
# TODO: Support for serde, i.e.:
# serde = { version = "1", optional = true, default-features = false }
# TODO: Support for serde_bytes, i.e.:
# serde_bytes = { version = "0.11", optional = true }
# TODO: Support for zeroize, i.e.:
# zeroize = { version = "1", optional = true, default-features = false }


[features]
default = ["std"]
std = ["signature/std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
